# cmake-tools

./: .cspell.json  .gitignore  .markdownlint.yaml  .prettierignore  .readthedocs.yaml  BoostAddTests.cmake  BoostTest.cmake  CMakeLists.txt  CMakeToolsCompileOptions.cmake  CMakeToolsDefaultCompileOptions.cmake  CMakeToolsTargetDependencies.cmake  CMakeToolsVersionFromGit.cmake  CTSanitizers.cmake  FindDocker.cmake  FindLizard.cmake  FindPlantUML.cmake  README.md  cmake-tools-config.cmake  ct_asan_test.cpp  ct_msan_test.cpp  ct_tsan_test.cpp  ct_ubsan_test.cpp  license.txt  readme.md
.github/workflows/: code_quality.yml  release.yaml  static_analysis.yaml
documentation/: requirements.txt
documentation/source/: cmake_tools_compile_options.rst  cmake_tools_default_compile_options.rst  cmake_tools_sanitizers.rst  cmake_tools_target_dependencies.rst  cmake_tools_version_from_git.rst  conf.py  find_lizard.rst  find_plantuml.rst  getting_started.rst  index.rst
tests/: CMakeLists.txt
